test/sema/increment-through-pointer-error.cx
// RUN: %not %cx -typecheck %s | %FileCheck %s

void f(bool* a) {
    var p = a;
    // CHECK: [[@LINE+1]]:6: error: cannot increment 'bool'
    p++;
}
